tests/approvals/integration_test.test_check_proj_error.approved.txt
exit_code: 1
stdout:

stderr:
Check of <root-dir>/sample_inputs/proj_error/src/main.cpp finished with exit code 0.
Check of <root-dir>/sample_inputs/proj_error/src/sample_function.cpp finished with exit code 1.
<root-dir>/sample_inputs/proj_error/src/sample_function.cpp:3:26: error: use of undeclared identifier 'std' [clang-diagnostic-error]
    3 | void sample_function() { std::cout << "Test" << std::endl; }
      |                          ^
<root-dir>/sample_inputs/proj_error/src/sample_function.cpp:3:49: error: use of undeclared identifier 'std' [clang-diagnostic-error]
    3 | void sample_function() { std::cout << "Test" << std::endl; }
      |                                                 ^

2 errors generated.
Error while processing <root-dir>/sample_inputs/proj_error/src/sample_function.cpp.

Some errors detected.

